--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230115200208"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230115200208">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230115200208" />
+    <script defer src="js/app.js?_v=20230116135639"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230116135639">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230116135639" />
     <title>Document</title>
 </head>
 
@@ -15,48 +15,48 @@
 
     <div class="page-definer index"></div>
 
-    <section class="header__container">
+    <section class="main-page-header">
         <div class="header">
-    <div class="header__left">
-        <div class="header__logo"><a href="index.html">LOGO</a></div>
-        <div class="header__links">
-            <div class="header__link"><a href="index.html">Home</a></div>
-            <div class="header__link"><a href="projects.html">Projects</a></div>
-            <div class="header__link"><a href="about.html">About us</a></div>
-            <div class="header__link"><a href="news.html">Blog</a></div>
-            <div class="header__link"><a href="contacts.html">Contacts</a></div>
-        </div>
-        <div class="header__lower">
-            <div class="header__langs">
-                <div class="header__lang">Fb</div>
-                <div class="header__lang">In</div>
-                <div class="header__lang">Be</div>
-            </div>
-            <div class="header__dropdown-container select">
-                <div class="select__header">
-                    <img src="img/location.svg" alt="1" class="header__location">
-                    <span class="select-current">Berlin</span>
-                    <img src="img/dropdown-arrow.svg" alt="1" class="select__arrow">
+            <div class="header__left">
+                <div class="header__logo"><a href="index.html">LOGO</a></div>
+                <div class="header__links">
+                    <div class="header__link"><a href="index.html">Home</a></div>
+                    <div class="header__link"><a href="projects.html">Projects</a></div>
+                    <div class="header__link"><a href="about.html">About us</a></div>
+                    <div class="header__link"><a href="news.html">Blog</a></div>
+                    <div class="header__link"><a href="contacts.html">Contacts</a></div>
                 </div>
-                <ul class="select__body">
-                    <li class="select__item">London</li>
-                    <li class="select__item">Berlin</li>
-                </ul>
+                <div class="header__lower">
+                    <div class="header__langs">
+                        <div class="header__lang">Fb</div>
+                        <div class="header__lang">In</div>
+                        <div class="header__lang">Be</div>
+                    </div>
+                    <div class="header__dropdown-container select">
+                        <div class="select__header">
+                            <img src="img/location.svg" alt="1" class="header__location">
+                            <span class="select-current">Berlin</span>
+                            <img src="img/dropdown-arrow.svg" alt="1" class="select__arrow">
+                        </div>
+                        <ul class="select__body">
+                            <li class="select__item">London</li>
+                            <li class="select__item">Berlin</li>
+                        </ul>
+                    </div>
+                    <div class="header__phone">+380983527547</div>
+                    <div class="header__email">info@gmail.com</div>
+                </div>
             </div>
-            <div class="header__phone">+380983527547</div>
-            <div class="header__email">info@gmail.com</div>
+            <div class="header__buttons">
+                <div class="header__en">En</div>
+                <div class="popup-button header__button">Send Request</div>
+            </div>
+            <div class="header__en-mobile">En</div>
+            <div class="menu-icon">
+                <span></span>
+                <div class="menu-icon__text">Menu</div>
+            </div>
         </div>
-    </div>
-    <div class="header__buttons">
-        <div class="header__en">En</div>
-        <div class="popup-button header__button">Send Request</div>
-    </div>
-    <div class="header__en-mobile">En</div>
-    <div class="menu-icon">
-        <span></span>
-        <div class="menu-icon__text">Menu</div>
-    </div>
-</div>
     </section>
 
 
@@ -311,22 +311,25 @@
             </div>
             <div class="our-projects__footer">
                 <div class="cards-inline">
-    <img src="img/make-request-svg.svg" alt="" class="cards-inline__make-request">
-    <div class="cards-inline__title"><span class="cards-inline__title-left-text">Lorem ipsum dolor </span><br>sit amet, consectetur adipiscing elit.</div>
-    <div class="cards-inline__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu
-        mauris vitae posuere. Ut at luctus
-        ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium velit.</div>
-    <button class="cards-inline__button popup-button">Make request</button>
-</div>
+                    <img src="img/make-request-svg.svg" alt="" class="cards-inline__make-request">
+                    <div class="cards-inline__title"><span class="cards-inline__title-left-text">Lorem ipsum dolor
+                        </span><br>sit amet, consectetur adipiscing elit.</div>
+                    <div class="cards-inline__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                        ullamcorper eu
+                        mauris vitae posuere. Ut at luctus
+                        ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium velit.</div>
+                    <button class="cards-inline__button popup-button">Make request</button>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="cards-around-container">
         <div class="cards-around">
-    <div class="cards-around__title">@lorem.ipsum</div>
-    <div class="cards-around__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu mauris vitae posuere.</div>
-</div>
+            <div class="cards-around__title">@lorem.ipsum</div>
+            <div class="cards-around__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper
+                eu mauris vitae posuere.</div>
+        </div>
     </section>
 
     <section class="footer">
@@ -385,115 +388,115 @@
 
 
     <div class="popup__outer">
-    <div class="popup">
-        <div class="popup__cross">
-            <span></span>
-        </div>
-        <div class="popup__top">
-            <div class="popup__title">Make request</div>
-            <form action="#" method="post" class="popup__form">
-                <div class="popup__double-block">
-                    <input type="text" class="popup__input" placeholder="Name">
-                    <input type="text" class="popup__input" placeholder="Last Name">
-                </div>
-                <div class="popup__double-block">
-                    <input type="phone" class="popup__input" placeholder="Phone">
-                    <input type="text" class="popup__input" placeholder="Your City">
-                </div>
-                <div class="popup__double-block">
-                    <input type="email" class="popup__input" placeholder="Email">
-                    <select name="" id="" class="popup__input popup__select">
-                        <option selected value="property1" class=" popup__option">Property type</option>
-                        <option value="property2" class="popup__option">Property</option>
-                    </select>
-                </div>
-                <input type="text" class=" popup__input popup__input-wide " placeholder="Your comment">
-            </form>
-        </div>
-        <div class="popup__bottom">
-            <div class="popup__area">Area (m2)</div>
-            <div class="popup__bar">
-                <div class="popup__line"></div>
-                <div class="popup__line-mobile-top"></div>
-                <div class="popup__line-mobile-bottom"></div>
-                <div id="bar-half-1" class="popup__bar-half">
-                    <div class="popup__bar-part">
-                        <div class="popup__number">to 50</div>
-                        <div class="popup__outer-circle">
-                            <div class="popup__inner-circle"></div>
-                        </div>
-                    </div>
-                    <div class="popup__bar-part">
-                        <div class="popup__number active">50-150</div>
-                        <div class="popup__outer-circle active">
-                            <div class="popup__inner-circle active"></div>
-                        </div>
-                    </div>                        
-                    <div class="popup__bar-part">
-                        <div class="popup__number">150-250</div>
-                        <div class="popup__outer-circle">
-                            <div class="popup__inner-circle"></div>
-                        </div>
-                    </div>                        
-                    <div class="popup__bar-part">
-                        <div class="popup__number">250-400</div>
-                        <div class="popup__outer-circle">
-                            <div class="popup__inner-circle"></div>
-                        </div>
-                    </div>
-                </div>
-                <div id="bar-half-2" class="popup__bar-half">                      
-                    <div class="popup__bar-part">
-                        <div class="popup__number">400-600</div>
-                        <div class="popup__outer-circle">
-                            <div class="popup__inner-circle"></div>
-                        </div>
-                    </div>                        
-                    <div class="popup__bar-part">
-                        <div class="popup__number">600-800</div>
-                        <div class="popup__outer-circle">
-                            <div class="popup__inner-circle"></div>
-                        </div>
-                    </div>                        
-                    <div class="popup__bar-part">
-                        <div class="popup__number">800-1000</div>
-                        <div class="popup__outer-circle">
-                            <div class="popup__inner-circle"></div>
-                        </div>
-                    </div>                        
-                    <div class="popup__bar-part">
-                        <div class="popup__number">1000+</div>
-                        <div class="popup__outer-circle">
-                            <div class="popup__inner-circle"></div>
-                        </div>
-                    </div>
-                </div>
+        <div class="popup">
+            <div class="popup__cross">
+                <span></span>
             </div>
-            <div class="popup__buttons">
-                <div class="popup__attach">
-                    <div class="popup__attach-circle">
-                        <div class="popup__attach-cross">+</div>
+            <div class="popup__top">
+                <div class="popup__title">Make request</div>
+                <form action="#" method="post" class="popup__form">
+                    <div class="popup__double-block">
+                        <input type="text" class="popup__input" placeholder="Name">
+                        <input type="text" class="popup__input" placeholder="Last Name">
                     </div>
-                    <div class="popup__attach-text">
-                        <div class="popup__attach-heading">Attach your file</div>
-                        <div class="popup__attach-underheading">File size not more than 10 MB</div>
+                    <div class="popup__double-block">
+                        <input type="phone" class="popup__input" placeholder="Phone">
+                        <input type="text" class="popup__input" placeholder="Your City">
+                    </div>
+                    <div class="popup__double-block">
+                        <input type="email" class="popup__input" placeholder="Email">
+                        <select name="" id="" class="popup__input popup__select">
+                            <option selected value="property1" class=" popup__option">Property type</option>
+                            <option value="property2" class="popup__option">Property</option>
+                        </select>
+                    </div>
+                    <input type="text" class=" popup__input popup__input-wide " placeholder="Your comment">
+                </form>
+            </div>
+            <div class="popup__bottom">
+                <div class="popup__area">Area (m2)</div>
+                <div class="popup__bar">
+                    <div class="popup__line"></div>
+                    <div class="popup__line-mobile-top"></div>
+                    <div class="popup__line-mobile-bottom"></div>
+                    <div id="bar-half-1" class="popup__bar-half">
+                        <div class="popup__bar-part">
+                            <div class="popup__number">to 50</div>
+                            <div class="popup__outer-circle">
+                                <div class="popup__inner-circle"></div>
+                            </div>
+                        </div>
+                        <div class="popup__bar-part">
+                            <div class="popup__number active">50-150</div>
+                            <div class="popup__outer-circle active">
+                                <div class="popup__inner-circle active"></div>
+                            </div>
+                        </div>
+                        <div class="popup__bar-part">
+                            <div class="popup__number">150-250</div>
+                            <div class="popup__outer-circle">
+                                <div class="popup__inner-circle"></div>
+                            </div>
+                        </div>
+                        <div class="popup__bar-part">
+                            <div class="popup__number">250-400</div>
+                            <div class="popup__outer-circle">
+                                <div class="popup__inner-circle"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="bar-half-2" class="popup__bar-half">
+                        <div class="popup__bar-part">
+                            <div class="popup__number">400-600</div>
+                            <div class="popup__outer-circle">
+                                <div class="popup__inner-circle"></div>
+                            </div>
+                        </div>
+                        <div class="popup__bar-part">
+                            <div class="popup__number">600-800</div>
+                            <div class="popup__outer-circle">
+                                <div class="popup__inner-circle"></div>
+                            </div>
+                        </div>
+                        <div class="popup__bar-part">
+                            <div class="popup__number">800-1000</div>
+                            <div class="popup__outer-circle">
+                                <div class="popup__inner-circle"></div>
+                            </div>
+                        </div>
+                        <div class="popup__bar-part">
+                            <div class="popup__number">1000+</div>
+                            <div class="popup__outer-circle">
+                                <div class="popup__inner-circle"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <button class="popup__button">Send Request</button>
+                <div class="popup__buttons">
+                    <div class="popup__attach">
+                        <div class="popup__attach-circle">
+                            <div class="popup__attach-cross">+</div>
+                        </div>
+                        <div class="popup__attach-text">
+                            <div class="popup__attach-heading">Attach your file</div>
+                            <div class="popup__attach-underheading">File size not more than 10 MB</div>
+                        </div>
+                    </div>
+                    <button class="popup__button">Send Request</button>
+                </div>
+                <div class="popup__text">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its
+                    layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+                    as opposed to using
+                    'Content here, content here', making it look like readable English.</div>
             </div>
-            <div class="popup__text">It is a long established fact that a reader will be distracted by the readable
-                content of a page when looking at its
-                layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-                as opposed to using
-                'Content here, content here', making it look like readable English.</div>
         </div>
     </div>
-</div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230115200208"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230116135639"></script>
 
-    <script src="js/app.js?_v=20230115200208"></script>
+    <script src="js/app.js?_v=20230116135639"></script>
 </body>
 
 </html>
