--- a/404.html
+++ b/404.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/app.js?_v=20230116135639"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230116135639">
+    <script defer src="js/app.js?_v=20230116203010"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230116203010">
     <title>Document</title>
 </head>
-<body >
+
+<body>
     <div class="page-definer 404"></div>
     <div class="fail-page-full-page-container">
         <section class="fail-page-header">
@@ -71,10 +73,11 @@
         <section class="fail-page-underfooter">
             <div class="fail-page-underfooter__copyright">© Copyright 2018. All rights reserved</div>
             <div class="fail-page-underfooter__right">
-                <div class="fail-page-underfooter__text">Made with love in</div>
+                <div class="fail-page-underfooter__text"><a href="index.html">Made with love in</a></div>
                 <img src="img/the-first-the-last-logo.svg" alt="" class="fail-page-underfooter__img">
             </div>
         </section>
     </div>
 </body>
+
 </html>
