--- a/contacts.html
+++ b/contacts.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230116203010">
-    <script defer src="js/app.js?_v=20230116203010"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230116213302">
+    <script defer src="js/app.js?_v=20230116213302"></script>
     <title>Document</title>
 </head>
+
 <body>
 
     <div class="page-definer contacts"></div>
@@ -55,61 +57,6 @@
     </div>
 </div>
         </section>
-        
-        <section class="contacts-main">
-            <div class="contacts-main__container">
-                <div class="contacts-main__title">Drop us a line</div>
-                <div class="contacts-main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu
-                    mauris vitae posuere.</div>
-                <div class="contacts-main__main">
-                    <div class="contacts-main__lists">
-                        <div class="contacts-main__block">
-                            <div class="contacts-main__heading">Kyiv</div>
-                            <ul class="contacts-main__list">
-                                <li class="contacts-main__item">(209) 555-0104</li>
-                                <li class="contacts-main__item">6391 Elgin St. Celina,</li>
-                                <li class="contacts-main__item">Delaware 10299</li>
-                            </ul>
-                        </div>
-                        <div class="contacts-main__block">
-                            <div class="contacts-main__heading">Lviv</div>
-                            <ul class="contacts-main__list">
-                                <li class="contacts-main__item">(209) 555-0104</li>
-                                <li class="contacts-main__item">6391 Elgin St. Celina,</li>
-                                <li class="contacts-main__item">Delaware 10299</li>
-                            </ul>
-                        </div>
-                        <div class="contacts-main__block">
-                            <div class="contacts-main__heading">Kharkiv</div>
-                            <ul class="contacts-main__list">
-                                <li class="contacts-main__item">(209) 555-0104</li>
-                                <li class="contacts-main__item">6391 Elgin St. Celina,</li>
-                                <li class="contacts-main__item">Delaware 10299</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="contacts-main__info">
-                        <div class="contacts-main__email">info@gmail.com</div>
-                        <div class="contacts-main__buttons">
-                            <span class="contacts-main__lang">Fb</span>
-                            <span class="contacts-main__lang">In</span>
-                            <span class="contacts-main__lang">Be</span>
-                        </div>
-                    </div>
-                </div>
-                <button class="popup-button contacts-main__button ">Make request</button>
-        
-                <section class="contacts-underfooter">
-                    <div class="contacts-underfooter__copyright">© Copyright 2018. All rights reserved</div>
-                    <div class="contacts-underfooter__right">
-                        <div class="contacts-underfooter__text">Made with love in</div>
-                        <img src="img/the-first-the-last-logo.svg" alt="" class="underfooter__img">
-                    </div>
-                </section>
-            </div>
-        </section>
-
-
         <div class="popup__outer">
     <div class="popup">
         <div class="popup__cross">
@@ -216,8 +163,65 @@
     </div>
 </div>
 
+        <section class="contacts-main">
+            <div class="contacts-main__container">
+                <div class="contacts-main__title">Drop us a line</div>
+                <div class="contacts-main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                    ullamcorper eu
+                    mauris vitae posuere.</div>
+                <div class="contacts-main__main">
+                    <div class="contacts-main__lists">
+                        <div class="contacts-main__block">
+                            <div class="contacts-main__heading">Kyiv</div>
+                            <ul class="contacts-main__list">
+                                <li class="contacts-main__item">(209) 555-0104</li>
+                                <li class="contacts-main__item">6391 Elgin St. Celina,</li>
+                                <li class="contacts-main__item">Delaware 10299</li>
+                            </ul>
+                        </div>
+                        <div class="contacts-main__block">
+                            <div class="contacts-main__heading">Lviv</div>
+                            <ul class="contacts-main__list">
+                                <li class="contacts-main__item">(209) 555-0104</li>
+                                <li class="contacts-main__item">6391 Elgin St. Celina,</li>
+                                <li class="contacts-main__item">Delaware 10299</li>
+                            </ul>
+                        </div>
+                        <div class="contacts-main__block">
+                            <div class="contacts-main__heading">Kharkiv</div>
+                            <ul class="contacts-main__list">
+                                <li class="contacts-main__item">(209) 555-0104</li>
+                                <li class="contacts-main__item">6391 Elgin St. Celina,</li>
+                                <li class="contacts-main__item">Delaware 10299</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="contacts-main__info">
+                        <div class="contacts-main__email">info@gmail.com</div>
+                        <div class="contacts-main__buttons">
+                            <span class="contacts-main__lang">Fb</span>
+                            <span class="contacts-main__lang">In</span>
+                            <span class="contacts-main__lang">Be</span>
+                        </div>
+                    </div>
+                </div>
+                <button class="popup-button contacts-main__button ">Make request</button>
+
+                <section class="contacts-underfooter">
+                    <div class="contacts-underfooter__copyright">© Copyright 2018. All rights reserved</div>
+                    <div class="contacts-underfooter__right">
+                        <div class="contacts-underfooter__text">Made with love in</div>
+                        <img src="img/the-first-the-last-logo.svg" alt="" class="underfooter__img">
+                    </div>
+                </section>
+            </div>
+        </section>
+
+
+
 
 
     </div>
 </body>
+
 </html>
