--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230116213302"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230116213302">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230116213302" />
+    <script defer src="js/app.js?_v=20230117235206"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230117235206">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230117235206" />
     <title>Document</title>
 </head>
 
@@ -78,8 +78,8 @@
                 <div class="main-slider__text-block">
                     <div class="main-slider__title">Thoughtful <br>
                         making of space</div>
-                    <div class="main-slider__discover-button popup-button">
-                        <div class="main-slider__line-short"></div>Discover more<div class="main-slider__line-long">
+                    <div class="main-slider__discover-button">
+                        <div class="main-slider__line-short"></div><a href="projects.html">Discover more</a><div class="main-slider__line-long">
                         </div>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
                     <div class="main-slider__text-block">
                         <div class="main-slider__title">Thoughtful <br>
                             making of space</div>
-                        <div class="main-slider__discover-button popup-button">
-                            <div class="main-slider__line-short"></div>Discover more<div class="main-slider__line-long">
+                        <div class="main-slider__discover-button ">
+                            <div class="main-slider__line-short"></div><a href="projects.html">Discover more</a><div class="main-slider__line-long">
                             </div>
                         </div>
                     </div>
@@ -156,8 +156,8 @@
                     <div class="main-slider__text-block">
                         <div class="main-slider__title">Thoughtful <br>
                             making of space</div>
-                        <div class="main-slider__discover-button popup-button">
-                            <div class="main-slider__line-short"></div>Discover more<div class="main-slider__line-long">
+                        <div class="main-slider__discover-button ">
+                            <div class="main-slider__line-short"></div><a href="projects.html">Discover more</a><div class="main-slider__line-long">
                             </div>
                         </div>
                     </div>
@@ -201,9 +201,9 @@
                     design. Do you want to combine classics and abstract art? Modern and retro? Love everything
                     associated with the 1940's?
                     No problem!</div>
-                <div class="philosophy__button popup-button">
+                <div class="philosophy__button ">
                     <div class="philosophy__line-short"></div>
-                    Discover more
+                    <a href="projects.html">Discover more</a>
                     <div class="philosophy__line-long"></div>
                 </div>
             </div>
@@ -241,9 +241,9 @@
                             <div class="our-projects__info-part">80 sq.m</div>
                         </div>
                         <div class="our-projects__project-name">Eyewear store interior</div>
-                        <div class="our-projects__button popup-button">
+                        <div class="our-projects__button ">
                             <div class="our-projects__line-short"></div>
-                            Discover more
+                            <a href="projects.html">Discover more</a>
                             <div class="our-projects__line-long"></div>
                         </div>
                     </div>
@@ -254,9 +254,9 @@
                             <div class="our-projects__info-part">80 sq.m</div>
                         </div>
                         <div class="our-projects__project-name">Minimalist style home</div>
-                        <div class="our-projects__button popup-button">
+                        <div class="our-projects__button ">
                             <div class="our-projects__line-short"></div>
-                            Discover more
+                            <a href="projects.html">Discover more</a>
                             <div class="our-projects__line-long"></div>
                         </div>
                     </div>
@@ -268,9 +268,9 @@
                         <div class="our-projects__info-part">80 sq.m</div>
                     </div>
                     <div id="projects-name-wide-block" class="our-projects__project-name">Eyewear store interior</div>
-                    <div class="our-projects__button-wide popup-button">
+                    <div class="our-projects__button-wide ">
                         <div class="our-projects__line-short"></div>
-                        Discover more
+                        <a href="projects.html">Discover more</a>
                         <div class="our-projects__line-long"></div>
                     </div>
                 </div>
@@ -282,9 +282,9 @@
                             <div class="our-projects__info-part">80 sq.m</div>
                         </div>
                         <div class="our-projects__project-name">Eyewear store interior</div>
-                        <div class="our-projects__button popup-button">
+                        <div class="our-projects__button ">
                             <div class="our-projects__line-short"></div>
-                            Discover more
+                            <a href="projects.html">Discover more</a>
                             <div class="our-projects__line-long"></div>
                         </div>
                     </div>
@@ -295,9 +295,9 @@
                             <div class="our-projects__info-part">80 sq.m</div>
                         </div>
                         <div class="our-projects__project-name">House on a Hillside</div>
-                        <div class="our-projects__button popup-button">
+                        <div class="our-projects__button ">
                             <div class="our-projects__line-short"></div>
-                            Discover more
+                            <a href="projects.html">Discover more</a>
                             <div class="our-projects__line-long"></div>
                         </div>
                     </div>
@@ -490,9 +490,9 @@
 </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230116213302"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230117235206"></script>
 
-    <script src="js/app.js?_v=20230116213302"></script>
+    <script src="js/app.js?_v=20230117235206"></script>
 </body>
 
 </html>
