--- a/news.html
+++ b/news.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230116213302">
-    <script defer src="js/app.js?_v=20230116213302"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230116213302" />
+    <link rel="stylesheet" href="css/style.css?_v=20230117235206">
+    <script defer src="js/app.js?_v=20230117235206"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230117235206" />
     <title>Document</title>
 </head>
 
@@ -87,8 +87,8 @@
                             <div class="news-main__title">5 smart tips for productive collaboration with the designer</div>
                             <div class="news-main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel gravida urna. Donec blandit sapien eu diam ullamcorper
                             euismod. Nam tempus pellentesque ligula ut aliquam.</div>
-                            <div class="news-main__discover-button popup-button">
-                                <div class="news-main__line-short"></div>Discover more<div class="news-main__line-long"></div>
+                            <div class="news-main__discover-button">
+                                <div class="news-main__line-short"></div><a href="one-news.html">Discover more</a><div class="news-main__line-long"></div>
                             </div>
                         </div>
                         <img src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
@@ -108,8 +108,8 @@
                             <div class="news-main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel gravida urna. Donec
                                 blandit sapien eu diam ullamcorper
                                 euismod. Nam tempus pellentesque ligula ut aliquam.</div>
-                            <div class="news-main__discover-button popup-button">
-                                <div class="news-main__line-short"></div>Discover more<div class="news-main__line-long"></div>
+                            <div class="news-main__discover-button">
+                                <div class="news-main__line-short"></div><a href="one-projects.html">Discover more</a><div class="news-main__line-long"></div>
                             </div>
                         </div>
                         <img id="second-image" src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
@@ -124,8 +124,8 @@
                             <div class="news-main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel gravida urna.
                                 Donec blandit sapien eu diam ullamcorper
                                 euismod. Nam tempus pellentesque ligula ut aliquam.</div>
-                            <div class="news-main__discover-button popup-button">
-                                <div class="news-main__line-short"></div>Discover more<div class="news-main__line-long"></div>
+                            <div class="news-main__discover-button">
+                                <div class="news-main__line-short"></div><a href="one-projects.html">Discover more</a><div class="news-main__line-long"></div>
                             </div>
                         </div>
                         <img src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
@@ -146,8 +146,8 @@
                                 Donec
                                 blandit sapien eu diam ullamcorper
                                 euismod. Nam tempus pellentesque ligula ut aliquam.</div>
-                            <div class="news-main__discover-button popup-button">
-                                <div class="news-main__line-short"></div>Discover more<div class="news-main__line-long"></div>
+                            <div class="news-main__discover-button">
+                                <div class="news-main__line-short"></div><a href="one-projects.html">Discover more</a><div class="news-main__line-long"></div>
                             </div>
                         </div>
                         <img id="second-image" src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
@@ -291,5 +291,5 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230116213302"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230117235206"></script>
 </body>
