--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230116213302"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230116213302">
+    <script defer src="js/app.js?_v=20230117235206"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230117235206">
     <title>Document</title>
 </head>
 
@@ -64,7 +64,7 @@
                 <div class="fail-page-main__text">Something went wrong. Page not found</div>
                 <div class="fail-page-main__button">
                     <div class="fail-page-main__line-short"></div>
-                    go to main
+                    <a href="index.html">go to main</a>
                     <div class="fail-page-main__line-long"></div>
                 </div>
             </div>
