--- a/about.html
+++ b/about.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css?_v=20230117235206">
     <script defer src="js/app.js?_v=20230117235206"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230117235206" />
     <title>Document</title>
 </head>
-<body>
-    <div class="page-definer projects"></div>
 
-    <section class="projects-header">
+<body>
+    <div class="page-definer about"></div>
+
+    <section class="about-header">
         <div class="header">
     <div class="header__left">
         <div class="header__logo"><a href="index.html">LOGO</a></div>
@@ -55,132 +58,167 @@
 </div>
     </section>
 
-    <section class="projects-controller">
-        <div class="projects-controller__top">
-            <div class="projects-controller__title">Our Projects</div>
-            <div class="projects-controller__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Aliquam ullamcorper eu
-                mauris vitae posuere. Ut at luctus
-                ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium velit.
+    <section class="about-main">
+        <div class="about-main__title">Company Philosophy</div>
+        <div class="about-main__text">The basic philosophy of our studio is to create individual, aesthetically stunning
+            solutions for our customers by
+            lightning-fast development of projects employing unique styles and architecture.</div>
+    </section>
+
+    <section class="company-philosophy">
+        <div class="company-philosophy__left">
+            <div class="company-philosophy__title">Company Philosophy</div>
+            <div class="company-philosophy__text">The basic philosophy of our studio is to create individual,
+                aesthetically stunning solutions for our customers by
+                lightning-fast development of projects employing unique styles and architecture.
+            </div>
+            <div class="company-philosophy__pagination-big-box">
+                <div class="company-philosophy__pag-container">
+                    <button class="swiper-button-prev company-philosophy__arrow-pag  company-philosophy__prev"
+                        id="company-philosophy-arrow-pag-left"></button>
+                    <span class="company-philosophy__pag-numbers">02</span>
+                    <div class="swiper-pagination company-philosophy__progressbar"></div>
+                    <span class="company-philosophy__pag-numbers">04</span>
+                    <button class="swiper-button-next company-philosophy__arrow-pag  company-philosophy__next"
+                        id="company-philosophy-arrow-pag-right"></button>
+                </div>
             </div>
         </div>
-        
-        <div class="projects-controller__buttons">
-            <button class="projects-controller__button active">House</button>
-            <button class="projects-controller__button">Apartments</button>
-            <button class="projects-controller__button">Commerce</button>
-            <button class="projects-controller__button">Architecture</button>
-            <div class="projects-controller__dropdown-container select">
-                <div class="select__header">
-                    <span class="select-current">Apartments</span>
-                    <img src="img/dropdown-arrow-black.svg" alt="1" class="select__arrow">
+        <div class="swiper company-philosophy__slider">
+            <div class="swiper-wrapper company-philosophy__wrapper">
+                <div class="swiper-slide company-philosophy__slide">
+                    <div class="company-philosophy__img company-philosophy__img-first"></div>
                 </div>
-                <ul class="select__body">
-                    <li class="select__item">House</li>
-                    <li class="select__item">Commerce</li>
-                </ul>
+                <div class="swiper-slide company-philosophy__slide">
+                    <div class="company-philosophy__img company-philosophy__img-second"></div>
+                </div>
+                <div class="swiper-slide company-philosophy__slide">
+                    <div class="company-philosophy__img company-philosophy__img-first"></div>
+                </div>
+                <div class="swiper-slide company-philosophy__slide">
+                    <div class="company-philosophy__img company-philosophy__img-second"></div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="first-stats">
+        <div class="first-stats__big-img"></div>
+        <div class="first-stats__right-part">
+            <div class="first-stats__info-container">
+                <div class="first-stats__info-top">
+                    <div class="first-stats__info">
+                        <div class="first-stats__number">6</div>
+                        <div class="first-stats__undertext">years <br>
+                            expertise</div>
+                    </div>
+                    <div class="first-stats__info">
+                        <div class="first-stats__number">100+</div>
+                        <div class="first-stats__undertext">completed <br>
+                            projects</div>
+                    </div>
+                </div>
+                <div class="first-stats__info-bottom">
+                    <div class="first-stats__info">
+                        <div class="first-stats__number">25+</div>
+                        <div class="first-stats__undertext">companies <br>
+                            cooperate</div>
+                    </div>
+                    <div class="first-stats__info">
+                        <div class="first-stats__number">2014</div>
+                        <div class="first-stats__undertext">year of <br>
+                            market entry</div>
+                    </div>
+                </div>
+            </div>
+            <div class="first-stats__text">The basic philosophy of our studio is to create individual, aesthetically
+                stunning solutions for our customers by
+                lightning-fast development of projects employing unique styles and architecture.
+            </div>
+        </div>
+        <div class="first-stats__small-img"></div>
+    </section>
+
+    <section class="founder">
+        <div class="founder__left">
+            <div class="founder__title">Roman Viktorovich</div>
+            <div class="founder__undertitle">Founder and CEO of Hilight</div>
+            <div class="founder__comment">
+                <div class="founder__quotes">“</div>
+                We can also help you create harmony out of seemingly completely incompatible elements in the interior or
+                the exterior
+                design.
+            </div>
+        </div>
+        <div class="founder__img"></div>
+    </section>
+
+    <section class="second-stats">
+        <div class="second-stats__img"></div>
+        <div class="second-stats__right">
+            <div class="second-stats__info-container">
+                <div class="second-stats__info">
+                    <div class="second-stats__number">5</div>
+                    <div class="second-stats__undertext">companies <br>
+                        cooperate</div>
+                </div>
+                <div class="second-stats__info">
+                    <div class="second-stats__number">4</div>
+                    <div class="second-stats__undertext">year of <br>
+                        market entry</div>
+                </div>
+                <div class="second-stats__info">
+                    <div class="second-stats__number">3</div>
+                    <div class="second-stats__undertext">companies <br>
+                        cooperate</div>
+                </div>
+            </div>
+            <div class="second-stats__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat nisl sit
+                risus pharetra nisl metus aliquet. Nibh eu
+                posuere sodales sem tellus. Vulputate est nisl convallis sed. Fames in dignissim erat fermentum sed sed.
+                In massa,
+                adipiscing aliquet mi semper facilisis ornare nisi. Non elit amet enim at cursus mauris senectus dolor
+                ac. Egestas
+                lectus in praesent mi arcu. Vitae nisl viverra enim nulla at. Fusce porta elementum quis.
             </div>
         </div>
     </section>
 
-    <div class="projects-our">
-        <section class="our-projects">
-            <div class="our-projects__container">
-                <div class="our-projects__gallery">
-                    <div class="our-projects__double-block">
-                        <div id="block-img1-projects" class="our-projects__block">
-                            <div class="our-projects__info">
-                                <div class="our-projects__info-part">Lodz</div>
-                                <div class="our-projects__info-part">16.10.2018</div>
-                                <div class="our-projects__info-part">80 sq.m</div>
-                            </div>
-                            <div class="our-projects__project-name">Eyewear store interior</div>
-                            <div class="our-projects__button">
-                                <div class="our-projects__line-short"></div>
-                                <a href="one-projects.html">Discover more</a>
-                                <div class="our-projects__line-long"></div>
-                            </div>
-                        </div>
-                        <div id="block-img2-projects" class="our-projects__block">
-                            <div class="our-projects__info">
-                                <div class="our-projects__info-part">Lodz</div>
-                                <div class="our-projects__info-part">16.10.2018</div>
-                                <div class="our-projects__info-part">80 sq.m</div>
-                            </div>
-                            <div class="our-projects__project-name">Minimalist style home</div>
-                            <div class="our-projects__button">
-                                <div class="our-projects__line-short"></div>
-                                <a href="one-projects.html">Discover more</a>
-                                <div class="our-projects__line-long"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="block-img3-projects" class="our-projects__block-wide">
-                        <div class="our-projects__info">
-                            <div class="our-projects__info-part">Lodz</div>
-                            <div class="our-projects__info-part">16.10.2018</div>
-                            <div class="our-projects__info-part">80 sq.m</div>
-                        </div>
-                        <div id="projects-page-projects-name-wide-block" class="our-projects__project-name">Minimalist style home</div>
-                        <div class="our-projects__button-wide">
-                            <div class="our-projects__line-short"></div>
-                            <a href="one-projects.html">Discover more</a>
-                            <div class="our-projects__line-long"></div>
-                        </div>
-                    </div>
-                    <div class="our-projects__double-block">
-                        <div id="block-img4-projects" class="our-projects__block">
-                            <div class="our-projects__info">
-                                <div class="our-projects__info-part">Lodz</div>
-                                <div class="our-projects__info-part">16.10.2018</div>
-                                <div class="our-projects__info-part">80 sq.m</div>
-                            </div>
-                            <div class="our-projects__project-name">Eyewear store interior</div>
-                            <div class="our-projects__button">
-                                <div class="our-projects__line-short"></div>
-                            <a href="one-projects.html">Discover more</a>
-                                <div class="our-projects__line-long"></div>
-                            </div>
-                        </div>
-                        <div id="block-img5-projects" class="our-projects__block">
-                            <div class="our-projects__info">
-                                <div class="our-projects__info-part">Lodz</div>
-                                <div class="our-projects__info-part">16.10.2018</div>
-                                <div class="our-projects__info-part">80 sq.m</div>
-                            </div>
-                            <div class="our-projects__project-name">House on a Hillside</div>
-                            <div class="our-projects__button">
-                                <div class="our-projects__line-short"></div>
-                            <a href="one-projects.html">Discover more</a>
-                                <div class="our-projects__line-long"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="block-img6-projects" class="our-projects__block-wide">
-                        <div class="our-projects__info">
-                            <div class="our-projects__info-part">Lodz</div>
-                            <div class="our-projects__info-part">16.10.2018</div>
-                            <div class="our-projects__info-part">80 sq.m</div>
-                        </div>
-                        <div id="projects-page-projects-name-wide-block" class="our-projects__project-name">House on a Hillside</div>
-                        <div class="our-projects__button-wide">
-                            <div class="our-projects__line-short"></div>
-                        <a href="one-projects.html">Discover more</a>
-                            <div class="our-projects__line-long"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="our-projects__footer">
-                    <div class="cards-inline">
-    <img src="img/make-request-svg.svg" alt="" class="cards-inline__make-request">
-    <div class="cards-inline__title"><span class="cards-inline__title-left-text">Lorem ipsum dolor </span><br>sit amet, consectetur adipiscing elit.</div>
-    <div class="cards-inline__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu
-        mauris vitae posuere. Ut at luctus
-        ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium velit.</div>
-    <button class="cards-inline__button popup-button">Make request</button>
+    <section class="about-cards">
+        <div class="cards-around">
+    <div class="cards-around__title">@lorem.ipsum</div>
+    <div class="cards-around__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu mauris vitae posuere.</div>
 </div>
+    </section>
+
+    <section class="about-footer">
+        <div class="about-footer__container">
+            <div class="about-footer__left">
+                <div class="about-footer__title">
+                    Do you want to work in our team?
+                </div>
+                <form action="#" class="about-footer__form">
+                    <input type="email" class="about-footer__input" placeholder="Email">
+                    <button class="about-footer__submit"><img src="img/about-footer-arrow.svg" alt=""
+                            class="about-footer__arrow"></button>
+                </form>
+            </div>
+            <div class="about-footer__right">
+                <div class="about-footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper
+                    eu mauris vitae posuere. Ut at luctus
+                    ligula. Nunc ante felis, aliquam.</div>
+                <div class="about-footer__right-bottom">
+                    <div class="about-footer__email">info@hi-light.pl</div>
+                    <div class="about-footer__little-buttons">
+                        <div class="about-footer__little-button">Fb</div>
+                        <div class="about-footer__little-button">In</div>
+                        <div class="about-footer__little-button">Be</div>
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
+
         <section class="underfooter">
             <div class="underfooter__copyright">© Copyright 2018. All rights reserved</div>
             <div class="underfooter__right">
@@ -188,8 +226,7 @@
                 <img src="img/the-first-the-last-logo_black.svg" alt="" class="underfooter__img">
             </div>
         </section>
-    </div>
-
+    </section>
     <div class="popup__outer">
     <div class="popup">
         <div class="popup__cross">
@@ -296,6 +333,7 @@
     </div>
 </div>
 
-    <!-- <section class="projects-gallery"></section> -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230117235206"></script>
 </body>
+
 </html>
