--- a/one-projects.html
+++ b/one-projects.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230116213302">
-    <script defer src="js/app.js?_v=20230116213302"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230117235206">
+    <script defer src="js/app.js?_v=20230117235206"></script>
     <title>Document</title>
 </head>
 
@@ -105,8 +105,8 @@
                 Proin finibus lobortis arcu dictum convallis. Ut fermentum eu magna vel laoreet. In lacus augue,
                 malesuada id elit sit
                 amet, varius imperdiet ex. Nullam blandit lobortis posuere:</div>
-            <but class="one-projects-main__discover-button popup-button">
-                <div class="one-projects-main__line-short"></div>Discover more<div class="one-projects-main__line-long">
+            <but class="one-projects-main__discover-button ">
+                <div class="one-projects-main__line-short"></div><a href="projects.html">Discover more</a><div class="one-projects-main__line-long">
                 </div>
             </but>
         </div>
